--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Charleswang.GitHub.io</h1>
-      <h2 class="project-tagline">Home Page Charles Wang</h2>
-      <a href="https://github.com/leaderwang1993/charleswang.github.io" class="btn">View on GitHub</a>
-      <a href="https://github.com/leaderwang1993/charleswang.github.io/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/leaderwang1993/charleswang.github.io/tarball/master" class="btn">Download .tar.gz</a>
+      <h1 class="project-name">Charles Wang</h1>
+      <h2 class="project-tagline">MSc Financial System Engineering</h2>
+      <h3 class="project-tagline">University College London</h2>
+      <a href="https://github.com/leaderwang1993/charleswang.github.io" class="btn">Download my CV</a>
+      <a href="mailto:charlesycwang0225@gmail.com">Send me Email</a>
     </section>
 
     <section class="main-content">
