--- a/index.html
+++ b/index.html
@@ -22,27 +22,44 @@
       <h3>
       <a id="About Me" class="anchor" href="#About-me" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About Me</h3>
 
-<p>I am currently a MSc Financial System Engineering student at University College London (UCL) </p>
+<p>I am currently a Master of Science student in Financial System Engineering at University College London (UCL), and will join PwC at Risk Assurance as an associate after graduation. </p>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="Work Interest" class="anchor" href="#Work-interest" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Work Interest</h3>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>Management Consulting, Strategy Consulting, Project Management, Business Analytics, Financial Analytics and Modelling, IT Consulting, Financial Services, Requirement and Architecture of System in Financial Industry. </p>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="Experience" class="anchor" href="#experience" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Experience</h3>
 
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p> <table border="1">
+  <tr>
+    <th>Time</th>
+    <th>Work</th>
+    <th>Company/School</th>
+    <th>Role</th>
+  </tr>
+  <tr>
+    <td>2015.10-2016.4</td>
+    <td>2015.9-2016.3</td>
+    <td>2015.7-2015.8</td>
+    <td>2015.6-2015.8</td>
+  </tr>
+  <tr>
+    <td>E-Health Vigor Project (Diet and Nutrition Analytics)</td>
+    <td>STFM Quantitative Investment Algorithm with Python</td>
+    <td>IT Planning Intern</td>
+    <td>Operational Optimisation Intern</td>
+  </tr>
+  <tr>
+    <td>Microsoft UK</td>
+    <td>UCL</td>
+    <td>Volkswagen</td>
+    <td>Yum! Consulting</td>
+  </tr>
+</table>
+</p>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/leaderwang1993/charleswang.github.io">Charleswang.GitHub.io</a> is maintained by <a href="https://github.com/leaderwang1993">leaderwang1993</a>.</span>
