--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
   </tr>
   <tr>
     <td>2015.10-2016.4</td>
-    <td>2015.9-2016.3</td>
-    <td>2015.7-2015.8</td>
-    <td>2015.6-2015.8</td>
+    <td>E-Health Vigor Project (Diet and Nutrition Analytics)</td>
+    <td>Microsoft UK</td>
+    <td>Project Leader, Implementer</td>
   </tr>
   <tr>
-    <td>E-Health Vigor Project (Diet and Nutrition Analytics)</td>
+    <td></td>
     <td>STFM Quantitative Investment Algorithm with Python</td>
     <td>IT Planning Intern</td>
     <td>Operational Optimisation Intern</td>
