--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Charles Wang</h1>
+      <h1 class="project-name">Yichen Wang (Charles)</h1>
       <h2 class="project-tagline">MSc Financial System Engineering</h2>
       <h3 class="project-tagline">University College London</h2>
       <a href="https://github.com/leaderwang1993/charleswang.github.io/CV_pwc_YichenWang.pdf" class="btn">Download my CV</a>
