--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <tr>
     <td>2015.10-2016.4</td>
     <td>E-Health Vigor Project (Diet and Nutrition Analytics)</td>
-    <td>Microsoft UK</td>
+    <td>Microsoft-UCL</td>
     <td>Project Leader, Implementer</td>
   </tr>
   <tr>
