--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1 class="project-name">Yichen Wang (Charles)</h1>
       <h2 class="project-tagline">MSc Financial System Engineering</h2>
       <h3 class="project-tagline">University College London</h2>
-      <a href="https://github.com/leaderwang1993/charleswang.github.io/CV_pwc_YichenWang.pdf" class="btn">Download my CV</a>
+      <a href="https://github.com/leaderwang1993/home/YW_newCV_Jun23.pdf" class="btn">Download my CV</a>
       <a href="mailto:charlesycwang0225@gmail.com" class="btn">Send me Email</a>
     </section>
 
